Fixed Test Overlap, Data saving, Viewport etc...

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1508,6 +1508,15 @@ div.headerProgress {
 .codeSubmissions {
   display: flex;
   flex-direction: column;
+
+  height: 100%;
+  flex: 1;
+
+  gap: 1rem;
+}
+
+.codeSubmissions > div:first-of-type {
+  flex: 1;
 }
 
 .lessonsHidden {
